# agent-trace

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_TRACKER.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  README.md  chomeDev  chomeDev.sh  chromeDev  completed.md  docker-compose.yml  launch-devtools.sh  loader.py  loop.sh  prompt_architecture.md  prompt_test.md  test_completed.md  test_plan.md
src/backend/: Dockerfile  __init__.py  alembic.ini  db.py  main.py  models.py  pyproject.toml
src/backend/agents/: deep_agent_tracer.py  error_analysis_agent.py  harness_change_synthesis.py  langgraph_agent.py  tracer_config.py  tracer_context.py  tracer_middleware.py  tracer_prompts.py  tracer_state.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20260306_01_add_trace_tables.py
src/backend/common/db/: __init__.py
src/backend/routers/: tracer.py
src/backend/schemas/: harness_changes.py  improvement_metrics.py  sandbox.py  trace.py  tracer_api.py
src/backend/services/: harness_change_review_service.py  improvement_metrics_service.py  langfuse_trace_service.py  sandbox_service.py  trace_analyzer_service.py  trace_storage_service.py
src/backend/tests/agents/: test_deep_agent_tracer.py  test_error_analysis_agent.py  test_langgraph_agent.py  test_tracer_config.py  test_tracer_context.py  test_tracer_middleware.py  test_tracer_prompts.py
src/backend/tests/api/: test_health.py  test_tracer_run.py
src/backend/tools/: __init__.py  codebase_tools.py  sandbox_tools.py  trace_tools.py
src/frontend/: index.html  (+3 more)
(+14 files in other folders)
